--- a/static/css/index.css
+++ b/static/css/index.css
@@ -129,6 +129,6 @@ button {
 
 @media screen and (max-width: 700px) {
     .col {
-        width: 91%;
+        width: 89%;
     }
 }
